--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     text-decoration: none; /* Supprimer le soulignement des liens */
     font-family: "Poppins", sans-serif;
     overflow-x: hidden; /* Empêcher le débordement horizontal */
-    outline: 1px solid red !important; /* Pour le débogage*/
+    /*outline: 1px solid red !important; /* Pour le débogage*/
 }
 
 body {
